--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "build",
+  "name": "FTLAbs Speed Feed",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
