remove main package param

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "FTLAbs Speed Feed",
+  "name": "FTLabs Speed Feed",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js"
