Fix node version.

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "helmet": "^3.6.1",
     "https": "^1.0.0",
     "path": "^0.12.7"
+  },
+  "engine" : {
+    "node" : "> 6.11.0 < 7.0.0"
   }
 }
